--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,17 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: "James_wilson21"
+github_username:  jameswilson1994
 
 # Build settings
 plugins:
   - jekyll-feed
+  - jekyll-time-to-read
+  - jekyll-paginate
+
+paginate: 5
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
